project3/.antlr/myparserParser.java
// Generated from /home/alpaca/compiler/project3/myparser.g4 by ANTLR 4.13.1

    // import packages here.
    import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class myparserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Break=1, Case=2, Char=3, Const=4, Continue=5, Default=6, Do=7, Double=8, 
		Else=9, Float=10, For=11, If=12, Int=13, Return=14, Short=15, Switch=16, 
		Void=17, While=18, Printf=19, Scanf=20, Malloc=21, Free=22, LeftParen=23, 
		RightParen=24, LeftBracket=25, RightBracket=26, LeftBrace=27, RightBrace=28, 
		Dot=29, Semi=30, Comma=31, Colon=32, Less=33, LessEqual=34, Greater=35, 
		GreaterEqual=36, LeftShift=37, RightShift=38, Plus=39, PlusPlus=40, Minus=41, 
		MinusMinus=42, Star=43, Div=44, Mod=45, And=46, Or=47, AndAnd=48, OrOr=49, 
		Caret=50, Not=51, Tilde=52, Assign=53, StarAssign=54, DivAssign=55, ModAssign=56, 
		PlusAssign=57, MinusAssign=58, LeftShiftAssign=59, RightShiftAssign=60, 
		AndAssign=61, XorAssign=62, OrAssign=63, Equal=64, NotEqual=65, Identifier=66, 
		Constant=67, IntegerConstant=68, FloatingConstant=69, DoubleConstant=70, 
		CharacterConstant=71, StringLiteral=72, Directive=73, Whitespace=74, Newline=75, 
		BlockComment=76, LineComment=77;
	public static final int
		RULE_translationUnit = 0, RULE_declaration = 1, RULE_initialization = 2, 
		RULE_type = 3, RULE_declarator = 4, RULE_parameterList = 5, RULE_parameterDeclaration = 6, 
		RULE_functionDefinition = 7, RULE_block = 8, RULE_statement = 9, RULE_constant = 10, 
		RULE_simpleExpression = 11, RULE_postfixExpression = 12, RULE_prefixExpression = 13, 
		RULE_unaryOperator = 14, RULE_unaryExpression = 15, RULE_mulicativeExpression = 16, 
		RULE_additiveExpression = 17, RULE_shiftExpression = 18, RULE_compareExpression = 19, 
		RULE_equalityExpression = 20, RULE_andExpression = 21, RULE_exclusiveOrExpression = 22, 
		RULE_inclusiveOrExpression = 23, RULE_logicalAndExpression = 24, RULE_logicalOrExpression = 25, 
		RULE_assignmentExpression = 26, RULE_assignmentOperator = 27, RULE_expression = 28, 
		RULE_selection = 29, RULE_caseStatement = 30, RULE_defaultStatement = 31, 
		RULE_iteration = 32, RULE_forCondition = 33, RULE_forDeclaration = 34, 
		RULE_functionCall = 35, RULE_printf = 36, RULE_scanf = 37, RULE_malloc = 38, 
		RULE_free = 39, RULE_customerFunction = 40, RULE_parameter = 41, RULE_generalParameter = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"translationUnit", "declaration", "initialization", "type", "declarator", 
			"parameterList", "parameterDeclaration", "functionDefinition", "block", 
			"statement", "constant", "simpleExpression", "postfixExpression", "prefixExpression", 
			"unaryOperator", "unaryExpression", "mulicativeExpression", "additiveExpression", 
			"shiftExpression", "compareExpression", "equalityExpression", "andExpression", 
			"exclusiveOrExpression", "inclusiveOrExpression", "logicalAndExpression", 
			"logicalOrExpression", "assignmentExpression", "assignmentOperator", 
			"expression", "selection", "caseStatement", "defaultStatement", "iteration", 
			"forCondition", "forDeclaration", "functionCall", "printf", "scanf", 
			"malloc", "free", "customerFunction", "parameter", "generalParameter"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'break'", "'case'", "'char'", "'const'", "'continue'", "'default'", 
			"'do'", "'double'", "'else'", "'float'", "'for'", "'if'", "'int'", "'return'", 
			"'short'", "'switch'", "'void'", "'while'", "'printf'", "'scanf'", "'malloc'", 
			"'free'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "';'", "','", 
			"':'", "'<'", "'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", "'++'", "'-'", 
			"'--'", "'*'", "'/'", "'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", 
			"'~'", "'='", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", 
			"'&='", "'^='", "'|='", "'=='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Break", "Case", "Char", "Const", "Continue", "Default", "Do", 
			"Double", "Else", "Float", "For", "If", "Int", "Return", "Short", "Switch", 
			"Void", "While", "Printf", "Scanf", "Malloc", "Free", "LeftParen", "RightParen", 
			"LeftBracket", "RightBracket", "LeftBrace", "RightBrace", "Dot", "Semi", 
			"Comma", "Colon", "Less", "LessEqual", "Greater", "GreaterEqual", "LeftShift", 
			"RightShift", "Plus", "PlusPlus", "Minus", "MinusMinus", "Star", "Div", 
			"Mod", "And", "Or", "AndAnd", "OrOr", "Caret", "Not", "Tilde", "Assign", 
			"StarAssign", "DivAssign", "ModAssign", "PlusAssign", "MinusAssign", 
			"LeftShiftAssign", "RightShiftAssign", "AndAssign", "XorAssign", "OrAssign", 
			"Equal", "NotEqual", "Identifier", "Constant", "IntegerConstant", "FloatingConstant", 
			"DoubleConstant", "CharacterConstant", "StringLiteral", "Directive", 
			"Whitespace", "Newline", "BlockComment", "LineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "myparser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    static final boolean TRACEON = false;

	    HashMap<String,Integer> symtab = new HashMap<String, Type>();
	    HashMap<String,Integer> funs = new HashMap<String, Type>();

	    enum Type {
	        Int,
	        Float,
	        Double,
	        Char,
	        Short,
	        Void,
	        IntPtr,
	        FloatPtr,
	        DoublePtr,
	        CharPtr,
	        ShortPtr,
	        VoidPtr,
	        Function,
	        Boolean
	    }

	    static Type toPtr(Type t) {
	        switch(t) {
	            case Type.Int:
	                return Type.IntPtr;
	            case Type.Float:
	                return Type.FloatPtr;
	            case Type.Double:
	                return Type.DoublePtr;
	            case Type.Char:
	                return Type.CharPtr;
	            case Type.Short:
	                return Type.ShortPtr;
	            case Type.Void:
	                return Type.VoidPtr;
	            default:
	                return t;
	        }
	    }

	    static Type toElement(Type t) {
	        switch(t) {
	            case Type.IntPtr:
	                return Type.Int;
	            case Type.FloatPtr:
	                return Type.Float;
	            case Type.DoublePtr:
	                return Type.Double;
	            case Type.CharPtr:
	                return Type.CharPtr;
	            case Type.ShortPtr:
	                return Type.Short;
	            case Type.VoidPtr:
	                return Type.Void;
	            default:
	                return t;
	        }
	    }

	public myparserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TranslationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(myparserParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public List<TerminalNode> Semi() { return getTokens(myparserParser.Semi); }
		public TerminalNode Semi(int i) {
			return getToken(myparserParser.Semi, i);
		}
		public TranslationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translationUnit; }
	}

	public final TranslationUnitContext translationUnit() throws RecognitionException {
		TranslationUnitContext _localctx = new TranslationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1073915160L) != 0)) {
				{
				setState(89);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(86);
					declaration();
					}
					break;
				case 2:
					{
					setState(87);
					functionDefinition();
					}
					break;
				case 3:
					{
					setState(88);
					match(Semi);
					}
					break;
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(EOF);
			 if (TRACEON) System.out.println("translationUnit: (declaration | functionDefinition | ';')* EOF"); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class,0);
		}
		public TerminalNode Semi() { return getToken(myparserParser.Semi, 0); }
		public TerminalNode Const() { return getToken(myparserParser.Const, 0); }
		public TerminalNode Star() { return getToken(myparserParser.Star, 0); }
		public InitializationContext initialization() {
			return getRuleContext(InitializationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Const) {
				{
				setState(97);
				match(Const);
				}
			}

			setState(100);
			((DeclarationContext)_localctx).type = type();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Star) {
				{
				setState(101);
				match(Star);
				}
			}

			setState(104);
			declarator(((DeclarationContext)_localctx).type.attr_t);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Assign) {
				{
				setState(105);
				initialization(((DeclarationContext)_localctx).type.attr_t);
				}
			}

			setState(108);
			match(Semi);
			 
			        if (TRACEON) System.out.println("declaration: 'const'? type '*'? declarator initialization? ';'"); 
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitializationContext extends ParserRuleContext {
		public Type typ;
		public AssignmentExpressionContext assignmentExpression;
		public FunctionCallContext functionCall;
		public TerminalNode Assign() { return getToken(myparserParser.Assign, 0); }
		public AssignmentExpressionContext assignmentExpression() {
			return getRuleContext(AssignmentExpressionContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public InitializationContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public InitializationContext(ParserRuleContext parent, int invokingState, Type typ) {
			super(parent, invokingState);
			this.typ = typ;
		}
		@Override public int getRuleIndex() { return RULE_initialization; }
	}

	public final InitializationContext initialization(Type typ) throws RecognitionException {
		InitializationContext _localctx = new InitializationContext(_ctx, getState(), typ);
		enterRule(_localctx, 4, RULE_initialization);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(Assign);
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(112);
				((InitializationContext)_localctx).assignmentExpression = assignmentExpression();

				        if(((InitializationContext)_localctx).assignmentExpression.typ != _localctx.typ) {
				            System.err.println("Error! line number: " + (((InitializationContext)_localctx).assignmentExpression!=null?(((InitializationContext)_localctx).assignmentExpression.start):null).getLine() + "imcompatible types.");
				        }
				    
				}
				break;
			case 2:
				{
				setState(115);
				((InitializationContext)_localctx).functionCall = functionCall();

				        if(((InitializationContext)_localctx).functionCall.typ != _localctx.typ) {
				            System.err.println("Error! line number: " + (((InitializationContext)_localctx).functionCall!=null?(((InitializationContext)_localctx).functionCall.start):null).getLine() + "imcompatible types.");
				        }
				    
				}
				break;
			}
			 if (TRACEON) System.out.println("initialization: '=' (assignmentExpression | functionCall)"); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public Type attr_t;
		public TerminalNode Char() { return getToken(myparserParser.Char, 0); }
		public TerminalNode Int() { return getToken(myparserParser.Int, 0); }
		public TerminalNode Float() { return getToken(myparserParser.Float, 0); }
		public TerminalNode Double() { return getToken(myparserParser.Double, 0); }
		public TerminalNode Void() { return getToken(myparserParser.Void, 0); }
		public TerminalNode Short() { return getToken(myparserParser.Short, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Char:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(Char);
				 ((TypeContext)_localctx).attr_t =  Type.Char; 
				}
				break;
			case Int:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				match(Int);
				 ((TypeContext)_localctx).attr_t =  Type.Int; 
				}
				break;
			case Float:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				match(Float);
				 ((TypeContext)_localctx).attr_t =  Type.Float; 
				}
				break;
			case Double:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				match(Double);
				 ((TypeContext)_localctx).attr_t =  Type.Double; 
				}
				break;
			case Void:
				enterOuterAlt(_localctx, 5);
				{
				setState(130);
				match(Void);
				 ((TypeContext)_localctx).attr_t =  Type.Void; 
				}
				break;
			case Short:
				enterOuterAlt(_localctx, 6);
				{
				setState(132);
				match(Short);
				 ((TypeContext)_localctx).attr_t =  Type.Short; 
				 if (TRACEON) System.out.println("type: Char | Int | Float | Double | Void"); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaratorContext extends ParserRuleContext {
		public Type typ;
		public Token Identifier;
		public TerminalNode Identifier() { return getToken(myparserParser.Identifier, 0); }
		public TerminalNode LeftParen() { return getToken(myparserParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(myparserParser.RightParen, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode LeftBracket() { return getToken(myparserParser.LeftBracket, 0); }
		public TerminalNode RightBracket() { return getToken(myparserParser.RightBracket, 0); }
		public TerminalNode IntegerConstant() { return getToken(myparserParser.IntegerConstant, 0); }
		public DeclaratorContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public DeclaratorContext(ParserRuleContext parent, int invokingState, Type typ) {
			super(parent, invokingState);
			this.typ = typ;
		}
		@Override public int getRuleIndex() { return RULE_declarator; }
	}

	public final DeclaratorContext declarator(Type typ) throws RecognitionException {
		DeclaratorContext _localctx = new DeclaratorContext(_ctx, getState(), typ);
		enterRule(_localctx, 8, RULE_declarator);
		int _la;
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				((DeclaratorContext)_localctx).Identifier = match(Identifier);
